Implementei a forma mais simples possível de gerar a grid de div's
Basicamente, tem uma função que dinamicamente gera as div's na tela,
em um modelo de grid.

Também criei um simples 'player' com controles baseados nas setas do
teclado, para testar coisas relacionadas a movimentação de uma div, e
possível código de colisão a ser utilizado no projeto do pathfinder.

// Dificuldades:

Não existe um acesso direto com JS para modificar a posição dos nodes
dentro da arvore DOM, isso deve ser feito utilizando o CSS.

E para tanto, deve-se descobrir os 'fatores' de conversão entre o CSS
e o JS (numericamente falando).

Depois de quebrar a cabeça bastante, acredito que cheguei em um fator
possivelmente usável, mas ai só testando com outros tamanhos de grid e
objetos (div).

- O mais complicado foi tentar criar o sistema de colisão entre a div
que representa o personagem, e as demais div's. Não consegui fazer
funcionar, mas tenho algumas ideias que vou pesquisar depois para tentar.

No mais, amanha quero ver se implemento o sistema de pathfinder mais
simples, para fazer o player se movimentar sozinho pelo cenário, e assim
ver se realmente vai ser necessário implementar o sistema de colisão.

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Page Title</title>
-        <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="styles.css" />
+        <script src="main.js" defer></script>
     </head>
     <body>
-        <script src="main.js"></script>
-        <h1>Hello, world!</h1>
+        <div id="app"></div>
+
+        <pre>
+- Use as setas do teclado para mexer o pequeno quadrado vermelho pela tela.
+- Tentei fazer a colisão, para evitar que o quadrado entre nas div's, mas não consegui fazer.
+- Acredito que o proximo passo seja refinar a geração do Grid,
+     para que funcione a partir de um valor que voce defina.
+- E depois implementar o algoritmo de Pathfinder.
+    </pre
+        >
     </body>
 </html>
