Organização geral no código de Grid

--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,9 @@
         />
 
         <link rel="stylesheet" href="styles.css" />
-        <script src="main.js" defer></script>
+        <script src="main.js" type="module" defer></script>
     </head>
     <body>
         <div id="app"></div>
-
-        <pre>
-- Use as setas do teclado para mexer o pequeno quadrado vermelho pela tela.
-- Tentei fazer a colisão, para evitar que o quadrado entre nas div's, mas não consegui fazer.
-- Acredito que o proximo passo seja refinar a geração do Grid,
-     para que funcione a partir de um valor que voce defina.
-- E depois implementar o algoritmo de Pathfinder.
-    </pre
-        >
     </body>
 </html>
